[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Entities/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Entities/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Bullet/EnemyBullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemy.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 128.0

[node name="Enemy" instance=ExtResource( 1 )]

collision_layer = 2
script = ExtResource( 2 )
_sections_unfolded = [ "Collision" ]
Bullet = ExtResource( 3 )
shot_cooldown = 0.5
hp = 5
detect_radius = 300

[node name="Body" parent="." index="1"]

scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="spawn_point" parent="Body" index="0"]

position = Vector2( 64, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Collision" parent="." index="2"]

shape = SubResource( 1 )

[node name="Detecter" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="DetectionRange" type="CollisionShape2D" parent="Detecter" index="0"]

shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="body_entered" from="Detecter" to="." method="_on_Detecter_body_entered"]

[connection signal="body_exited" from="Detecter" to="." method="_on_Detecter_body_exited"]


